--- a/proyecto/src/app/users-list/users-list.component.html
+++ b/proyecto/src/app/users-list/users-list.component.html
@@ -38,7 +38,8 @@
       <div class="modal-body">
         <!-- Users list -->
         <div class="table-responsive">
-          <table class="table table-borderless table-hover" summary="Users lists.">
+          <table class="table table-borderless table-hover">
+            <caption style="display: none;">Users lists.</caption>
             <thead style="display: none;">
               <tr>
                 <th scope="col"></th>
