Finalizado el ver la lista de seguidores

--- a/proyecto/src/app/users-list/users-list.component.html
+++ b/proyecto/src/app/users-list/users-list.component.html
@@ -72,14 +72,7 @@
             </tbody>
           </table>
         </div>
-        <button
-          id="close"
-          #closebutton
-          type="button"
-          data-dismiss="modal"
-          [hidden]="true"
-        >
-        </button>
+        <button id="close" #closebutton type="button" data-dismiss="modal" [hidden]="true"></button>
       </div>
     </div>
   </div>
