Fix bug boton de editar información

--- a/proyecto/src/app/recuperar-password/recuperar-password.component.html
+++ b/proyecto/src/app/recuperar-password/recuperar-password.component.html
@@ -13,7 +13,7 @@
                   <div class="text-center">
                     <h1 class="h4 text-gray-900 mb-2">¿Olvidaste tú contraseña?</h1>
                     <p class="mb-4">
-                      Lo sabemos, esas cosas pasan. ¡Ingresa tu direccion de correo y te enviaremos
+                      Lo sabemos, esas cosas pasan. ¡Ingresa tu dirección de correo y te enviaremos
                       un link para que recuperes tu contraseña!
                     </p>
                   </div>
