--- a/proyecto/src/app/login/login.component.html
+++ b/proyecto/src/app/login/login.component.html
@@ -18,31 +18,27 @@
                   <div class="text-center">
                     <h1 class="h4 text-gray-900 mb-4">¡Bienvenido!</h1>
                   </div>
-                  <form class="user" (ngSubmit)="onSubmit(f)" #f="ngForm">
+                  <form class="user" [formGroup]="registerForm">
                   <div class="form-group">
                     <input
-                      type="email"
-                      class="form-control form-control-user"
-                      id="email"
-                      name="email"
-                      email
-                      placeholder="Ingrese su dirección de correo"
-                      ngModel
-                      required
+                    type="email"
+                    class="form-control form-control-user"
+                    id="email"
+                    aria-describedby="emailHelp"
+                    placeholder="Ingresa tu dirección de correo"
+                    formControlName="email"
                     />
                   </div>
                     <div class="form-group">
                       <input
-                        type="password"
-                        name="password"
-                        id="password"
-                        class="form-control form-control-user"
-                        ngModel
-                        required
-                        placeholder="Ingrese su contraseña"
+                      type="password"
+                      class="form-control form-control-user"
+                      formControlName="password"
+                      required
+                      placeholder="Ingresa tu contraseña"
                       />
                     </div>
-                    <button class="btn btn-primary btn-user btn-block" (click)="onSubmit(f)" [disabled]="!f.valid">
+                    <button class="btn btn-primary btn-user btn-block" (click)="onSubmit()" [disabled]="!registerForm.valid">
                       Iniciar sesión
                     </button>
                     <hr>
