--- a/proyecto/src/app/recuperar-password/recuperar-password.component.html
+++ b/proyecto/src/app/recuperar-password/recuperar-password.component.html
@@ -26,6 +26,7 @@
                         aria-describedby="emailHelp"
                         placeholder="Ingresa tu dirección de correo"
                         formControlName="email"
+                        required
                       />
                     </div>
                     <button
