--- a/proyecto/src/app/registrar-usuario/registrar-usuario.component.html
+++ b/proyecto/src/app/registrar-usuario/registrar-usuario.component.html
@@ -1,8 +1,5 @@
-
 <div class="bg-gradient-primary">
-
   <div class="container">
-
     <div class="card o-hidden border-0 shadow-lg my-5">
       <div class="card-body p-0">
         <!-- Nested Row within Card Body -->
@@ -13,32 +10,67 @@
               <div class="text-center">
                 <h1 class="h4 text-gray-900 mb-4">¡Aquí puedes crear tu cuenta!</h1>
               </div>
-              <form [formGroup]="registerForm" >
+              <form [formGroup]="registerForm">
                 <div class="form-group">
-                    <input type="text" class="form-control form-control-user" formControlName="firstName"  required placeholder="Nombre">
-                  </div>
-                    <div class="form-group">
-                    <input type="text" class="form-control form-control-user" formControlName="lastName" required placeholder="Apellidos">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control form-control-user" formControlName="userName" required placeholder="Nombre de usuario">
-                  </div>
-
-                <div class="form-group">
-                  <input type="email" class="form-control form-control-user" formControlName="email" required placeholder="Dirección de correo">
+                  <input
+                    type="text"
+                    class="form-control form-control-user"
+                    formControlName="firstName"
+                    required
+                    placeholder="Nombre"
+                  />
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control form-control-user" formControlName="password" required placeholder="Contraseña">
-                  </div>
-                <button href="login" class="btn btn-primary btn-user btn-block" [disabled]="!registerForm.valid" (click)="onSubmit()">
+                  <input
+                    type="text"
+                    class="form-control form-control-user"
+                    formControlName="lastName"
+                    required
+                    placeholder="Apellidos"
+                  />
+                </div>
+                <div class="form-group">
+                  <input
+                    type="text"
+                    class="form-control form-control-user"
+                    formControlName="userName"
+                    required
+                    placeholder="Nombre de usuario"
+                  />
+                </div>
+
+                <div class="form-group">
+                  <input
+                    type="email"
+                    class="form-control form-control-user"
+                    formControlName="email"
+                    required
+                    placeholder="Dirección de correo"
+                  />
+                </div>
+                <div class="form-group">
+                  <input
+                    type="password"
+                    class="form-control form-control-user"
+                    formControlName="password"
+                    required
+                    placeholder="Contraseña"
+                  />
+                </div>
+                <button
+                  href="login"
+                  class="btn btn-primary btn-user btn-block"
+                  [disabled]="!registerForm.valid"
+                  (click)="onSubmit()"
+                >
                   Registrar cuenta
                 </button>
-                <hr>
+                <hr />
               </form>
-              <hr>
+              <hr />
 
               <div class="text-center">
-                <a class="small" routerLink="/recuperar-password" >¿Olvidaste tu contraseña?</a>
+                <a class="small" routerLink="/recuperar-password">¿Olvidaste tu contraseña?</a>
               </div>
               <div class="text-center">
                 <a class="small" routerLink="/login">¿Ya tienes una cuenta? ¡Inicia sesión!</a>
@@ -48,7 +80,5 @@
         </div>
       </div>
     </div>
-
   </div>
-
 </div>
