--- a/proyecto/src/app/login/login.component.html
+++ b/proyecto/src/app/login/login.component.html
@@ -45,10 +45,10 @@
                   </form>
                   <hr>
                   <div class="text-center">
-                    <a class="small" routerLink="/recuperar-password" >¿Olvidaste tu contraseña?</a>
+                    <a class="small" href="/recuperar-password" >¿Olvidaste tu contraseña?</a>
                   </div>
                   <div class="text-center">
-                    <a routerLink="/registro" class="small" >¡Crear una cuenta nueva!</a>
+                    <a href="/registro" class="small" >¡Crear una cuenta nueva!</a>
                   </div>
                 </div>
               </div>
