--- a/proyecto/src/app/registrar-usuario/registrar-usuario.component.html
+++ b/proyecto/src/app/registrar-usuario/registrar-usuario.component.html
@@ -70,10 +70,10 @@
               <hr />
 
               <div class="text-center">
-                <a class="small" routerLink="/recuperar-password">¿Olvidaste tu contraseña?</a>
+                <a class="small" href="recuperar-password">¿Olvidaste tu contraseña?</a>
               </div>
               <div class="text-center">
-                <a class="small" routerLink="/login">¿Ya tienes una cuenta? ¡Inicia sesión!</a>
+                <a class="small" href="login">¿Ya tienes una cuenta? ¡Inicia sesión!</a>
               </div>
             </div>
           </div>
