--- a/proyecto/src/app/content-wrapper/content-wrapper.component.html
+++ b/proyecto/src/app/content-wrapper/content-wrapper.component.html
@@ -17,7 +17,7 @@
           <input
             type="text"
             class="form-control bg-light border-0 small"
-            placeholder="Search for..."
+            placeholder="¿A quien está buscando?"
             aria-label="Search"
             aria-describedby="basic-addon2"
             formControlName="searchInput"
@@ -50,17 +50,19 @@
             class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
             aria-labelledby="searchDropdown"
           >
-            <form class="form-inline mr-auto w-100 navbar-search">
+            <form class="form-inline mr-auto w-100 navbar-search" [formGroup]="inputForm"
+            >
               <div class="input-group">
                 <input
                   type="text"
                   class="form-control bg-light border-0 small"
-                  placeholder="Search for..."
+                  placeholder="¿A quien está buscando?"
                   aria-label="Search"
                   aria-describedby="basic-addon2"
+                  formControlName="searchInput"
                 />
                 <div class="input-group-append">
-                  <button class="btn btn-primary" type="button">
+                  <button class="btn btn-primary" type="button" (click)="onClick()">
                     <em class="fas fa-search fa-sm"></em>
                   </button>
                 </div>
