--- a/proyecto/src/app/crear-publicacion/crear-publicacion.component.html
+++ b/proyecto/src/app/crear-publicacion/crear-publicacion.component.html
@@ -1,11 +1,11 @@
-<div class="card w-50  mx-auto d-block" id="mainCard">
+<div class="card shadow mb-4" id="mainCard">
   <div class="card-body">
     <img
       class="img-fluid mx-auto d-block"
       src="
       https://firebasestorage.googleapis.com/v0/b/proyectoazul-dc9d3.appspot.com/o/bluebird.png?alt=media&token=7aa091e7-fa7c-4c70-9d3f-b09b92ae5fa6
       "
-      alt="Logo bluetweet"
+      alt="Logo Bluetweet"
       style="max-height: 100px; max-width: 100px;"
     />
 
