--- a/proyecto/src/app/publicacion/publicacion.component.css
+++ b/proyecto/src/app/publicacion/publicacion.component.css
@@ -1,15 +1,11 @@
 .image {
-  position: relative;
-  overflow: hidden;
-  padding-bottom: 50px;
-  max-width: 50px;
-}
-.image img {
-  position: absolute;
-  width: auto;
-  height: 100%;
+  max-width: 100%;
 }
 
 .card-body img {
   max-width: 100%;
+}
+
+.shadow {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
 }
