Ver publicaciones de los usuarios que sigo y las propias en el HOME

--- a/proyecto/src/app/crear-publicacion/crear-publicacion.component.html
+++ b/proyecto/src/app/crear-publicacion/crear-publicacion.component.html
@@ -1,4 +1,4 @@
-<div class="card shadow mb-4" id="mainCard">
+<div class="card shadow mb-4">
   <div class="card-body">
     <img
       class="img-fluid mx-auto d-block"
