--- a/proyecto/src/app/sidebar/sidebar.component.html
+++ b/proyecto/src/app/sidebar/sidebar.component.html
@@ -39,7 +39,7 @@
       type="button"
       class="btn btn-light btn-icon-split"
       data-toggle="modal"
-      data-target="#exampleModal"
+      data-target="#tweetModal"
     >
       <span class="icon text-gray-600">
         <em class="fas fa-plus"></em>
@@ -52,10 +52,10 @@
 <!-- Modal -->
 <div
   class="modal fade"
-  id="exampleModal"
+  id="tweetModal"
   tabindex="-1"
   role="dialog"
-  aria-labelledby="exampleModalLabel"
+  aria-labelledby="tweetModalLabel"
   aria-hidden="true"
 >
   <div class="modal-dialog">
