Arreglos de SonarCloud

--- a/proyecto/src/app/publicacion/publicacion.component.html
+++ b/proyecto/src/app/publicacion/publicacion.component.html
@@ -25,7 +25,7 @@
         aria-haspopup="true"
         aria-expanded="false"
       >
-        <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+        <em class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></em>
       </a>
       <div
         class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
