Implementación borrar publicación

--- a/proyecto/src/app/author/author.component.html
+++ b/proyecto/src/app/author/author.component.html
@@ -74,6 +74,7 @@
         *ngFor="let post of this.posts"
         [userData]="this.user"
         [postData]="post"
+        [userLoggedInId]="this.actualUser"
       ></app-publicacion>
     </div>
   </div>
