Pruebas unitarias e inicio de cypress

--- a/proyecto/src/app/file-uploader/file-uploader.component.html
+++ b/proyecto/src/app/file-uploader/file-uploader.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-danger" (click)="onUploadImage()">
+<button id="boton" class="btn btn-danger" (click)="onUploadImage()">
   <em class="fas fa-fw fa-image"></em>
    {{ this.uploadStatus }}
 </button>
