--- a/proyecto/src/app/registrar-usuario/registrar-usuario.component.html
+++ b/proyecto/src/app/registrar-usuario/registrar-usuario.component.html
@@ -58,8 +58,9 @@
                   />
                 </div>
                 <button
+                id="boton"
                   href="login"
-                  class="btn btn-primary btn-user btn-block"
+                  class="btn btn-primary btn-user btn-block boton"
                   [disabled]="!registerForm.valid"
                   (click)="onSubmit()"
                 >
