--- a/proyecto/src/app/login/login.component.html
+++ b/proyecto/src/app/login/login.component.html
@@ -38,7 +38,7 @@
                       placeholder="Ingresa tu contraseña"
                       />
                     </div>
-                    <button class="btn btn-primary btn-user btn-block" (click)="onSubmit()" [disabled]="!registerForm.valid">
+                    <button id="boton" class="btn btn-primary btn-user btn-block" (click)="onSubmit()" [disabled]="!registerForm.valid">
                       Iniciar sesión
                     </button>
                     <hr>
