--- a/proyecto/src/app/recuperar-password/recuperar-password.component.html
+++ b/proyecto/src/app/recuperar-password/recuperar-password.component.html
@@ -30,6 +30,7 @@
                       />
                     </div>
                     <button
+                    id="boton"
                       class="btn btn-primary btn-user btn-block"
                       (click)="onSubmit()"
                       [disabled]="!registerForm.valid"
