--- a/proyecto/src/app/login/login.component.html
+++ b/proyecto/src/app/login/login.component.html
@@ -31,6 +31,7 @@
                   </div>
                     <div class="form-group">
                       <input
+                      id="password"
                       type="password"
                       class="form-control form-control-user"
                       formControlName="password"
