--- a/proyecto/src/app/author/author.component.html
+++ b/proyecto/src/app/author/author.component.html
@@ -70,12 +70,26 @@
       </div>
 
       <!-- User posts -->
-      <app-publicacion
-        *ngFor="let post of this.posts"
-        [userData]="this.user"
-        [postData]="post"
-        [userLoggedInId]="this.actualUser"
-      ></app-publicacion>
+      <div *ngIf="this.posts.length > 0; then postsBlock; else noPostsBlock"></div>
+      <ng-template #postsBlock>
+        <app-publicacion
+          *ngFor="let post of this.posts"
+          [userData]="this.user"
+          [postData]="post"
+        ></app-publicacion
+      ></ng-template>
+      <ng-template #noPostsBlock>
+        <div class="card shadow mb-4">
+          <div class="card-body">
+            <div class="text-center">
+              <div class="error mx-auto"><em class="fas fa-frown-open"></em></div>
+              <p class="lead text-gray-800 mb-5">User Not Posted</p>
+              <p class="text-gray-500 mb-0">The user has not posted.</p>
+              <a href="index.html">&larr; Back to Home</a>
+            </div>
+          </div>
+        </div>
+      </ng-template>
     </div>
   </div>
   <ng-template #elseBlock>
