--- a/proyecto/src/app/crear-publicacion/crear-publicacion.component.html
+++ b/proyecto/src/app/crear-publicacion/crear-publicacion.component.html
@@ -22,7 +22,7 @@
 
     <app-file-uploader (imagePick)="onImagePicked($event)"></app-file-uploader>
 
-    <button type="button" class="btn btn-primary boton-publicar float-right" (click)="onSubmit()">
+    <button id="botonPublicar" type="button" class="btn btn-primary float-right" (click)="onSubmit()">
       Publicar
     </button>
   </div>
