--- a/proyecto/src/app/sidebar/sidebar.component.html
+++ b/proyecto/src/app/sidebar/sidebar.component.html
@@ -61,7 +61,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        <app-crear-publicacion></app-crear-publicacion>
+        <app-crear-publicacion  [boolModal]=true></app-crear-publicacion>
       </div>
     </div>
   </div>
