--- a/proyecto/src/app/recuperar-password/recuperar-password.component.html
+++ b/proyecto/src/app/recuperar-password/recuperar-password.component.html
@@ -17,7 +17,7 @@
                       un link para que recuperes tu contraseña!
                     </p>
                   </div>
-                  <form [formGroup]="registerForm">
+                  <form [formGroup]="recoverPasswordForm">
                     <div class="form-group">
                       <input
                         type="email"
@@ -33,7 +33,7 @@
                     id="boton"
                       class="btn btn-primary btn-user btn-block"
                       (click)="onSubmit()"
-                      [disabled]="!registerForm.valid"
+                      [disabled]="!recoverPasswordForm.valid"
                     >
                       Recuperar contraseña
                     </button>
