--- a/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
+++ b/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
@@ -41,7 +41,7 @@
           ></app-file-uploader>
         </div>
         <div class="datos">
-          <form [formGroup]="registerForm">
+          <form [formGroup]="editarForm">
             <div class="form-group">
               <div class="col-sm-10">
                 <label class="label" for="firstName">Nombre: </label>
