Fix bug foto de perfil

--- a/proyecto/src/app/publicacion/publicacion.component.html
+++ b/proyecto/src/app/publicacion/publicacion.component.html
@@ -1,4 +1,4 @@
-<div class="card shadow mb-4">
+<div class="card shadow mb-4" *ngIf="this.userData">
   <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
     <div class="container-fluid">
       <div class="row align-items-center">
