--- a/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
+++ b/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
@@ -4,6 +4,7 @@
   class="btn btn-secondary btn-icon-split"
   data-toggle="modal"
   data-target="#exampleModalCenter"
+  *ngIf="this.userData"
 >
   <span class="icon text-white-50">
     <em class="fas fa-edit"></em>
