--- a/proyecto/src/app/publicacion/publicacion.component.html
+++ b/proyecto/src/app/publicacion/publicacion.component.html
@@ -63,6 +63,7 @@
       <button
         type="button"
         class="btn btn-secondary btn-circle btn-sm text-right"
+        id="buttonUnlikePost"
         (click)="unlikePost()"
       >
         <em class="fas fa-thumbs-up"></em>
@@ -72,6 +73,7 @@
       <button
         type="button"
         class="btn btn-primary btn-circle btn-sm text-right"
+        id="buttonLikePost"
         (click)="likePost()"
       >
         <em class="fas fa-thumbs-up"></em>
