--- a/proyecto/src/app/users-list/users-list.component.html
+++ b/proyecto/src/app/users-list/users-list.component.html
@@ -65,6 +65,7 @@
                     routerLink="/author"
                     [queryParams]="{userId: this.user.userId}"
                     (click)="closeModal()"
+                    id="closeModalLink"
                     >{{ this.user.userName }}</a
                   >
                 </td>
