--- a/proyecto/src/app/author/author.component.html
+++ b/proyecto/src/app/author/author.component.html
@@ -77,6 +77,7 @@
           *ngFor="let post of this.posts"
           [userData]="this.user"
           [postData]="post"
+          [userLoggedInId]="this.userId"
         ></app-publicacion
       ></ng-template>
       <ng-template #noPostsBlock>
