--- a/proyecto/src/app/content-wrapper/content-wrapper.component.html
+++ b/proyecto/src/app/content-wrapper/content-wrapper.component.html
@@ -17,7 +17,7 @@
           <input
             type="text"
             class="form-control bg-light border-0 small"
-            placeholder="¿A quien está buscando?"
+            placeholder="¿A quién está buscando?"
             aria-label="Search"
             aria-describedby="basic-addon2"
             formControlName="searchInput"
@@ -56,7 +56,7 @@
                 <input
                   type="text"
                   class="form-control bg-light border-0 small"
-                  placeholder="¿A quien está buscando?"
+                  placeholder="¿A quién está buscando?"
                   aria-label="Search"
                   aria-describedby="basic-addon2"
                   formControlName="searchInput"
